Version 5.3
================================================================================

New result classes for the new risk detector service.

EmailAddress and TelNumber use the same polymorphic JSON functionality as the other classes.
Renamed StructuredStreetInfo.streetNumber to houseNumber.
These changes don't affect existing APIs, the domain classes were not in use yet.



Version 5.0
================================================================================

Added JSON support. Split into 2 modules core and json.
Modified output objects for name parser.
More enum values in TermType (see @since tags).




Version 4.1, 4.2 and 4.3
================================================================================

Various smaller changes, see version control history and bugtracker.



Version 4.0
================================================================================

Changed getter concept where the return value is nullable from get/require/has
to Guava's Optional.

The apiKey param is now part of the Context.





