@@ -7,6 +7,9 @@ EmailAddress and TelNumber use the same polymorphic JSON functionality as the ot
 Renamed StructuredStreetInfo.streetNumber to houseNumber.
 These changes don't affect existing APIs, the domain classes were not in use yet.
 
+PersonNameMatchType.PARTIAL was added as new enum value.
+
+
 
 
 Version 5.0
